# wos

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  .luarc.json  .mailmap  AGENTS.md  CLAUDE.MD  CMakeLists.txt  LICENSE.md  README.md  TODO.md  compile_commands_tests.json  debug_enhanced.gdb  debug_vscode.gdb  implementation_plans.md  logview.json  test_mlibc.sh  wos.code-workspace  wosdbg.json
modules/: .clang-tidy  .clangd  CMakeLists.txt
modules/debugserver/: CMakeLists.txt
modules/debugserver/src/: main.cpp
modules/defines/: datatypes.hpp  defines.hpp  stack_defines.hpp
modules/httpd/: CMakeLists.txt  linker.ld
modules/httpd/src/: filesystem.cpp  main.cpp  request.cpp  response.cpp  routes.cpp  server.cpp  socket_io.cpp  time.cpp
modules/init/: CMakeLists.txt  init.cpp  service.ld
modules/init/src/: env.cpp  env.h  fstab.cpp  fstab.h  init.cpp  init_log.cpp  init_log.h  network.cpp  network.h  services.cpp  services.h  shutdown.cpp  shutdown.h
modules/journal/: CMakeLists.txt
modules/journal/src/: journal_lib.cpp  main.cpp
modules/kern/: CMakeLists.txt  GNUmakefile  limine.cfg  limine.conf  linker.ld  sancov.ignore
modules/kern/scripts/: check_headers.sh  font.cpp  make_image.sh  rewrite_dbglog.sh  run_kern.sh
modules/kern/src/: main.cpp  release.hpp
modules/memacc/: CMakeLists.txt
modules/memacc/src/: commands.cpp  commands.hpp  main.cpp  options.cpp  options.hpp  processes.cpp  processes.hpp  procfs_io.cpp  procfs_io.hpp  reports.cpp  reports.hpp  rows.cpp  rows.hpp  types.hpp
modules/netd/: CMakeLists.txt
modules/netd/src/: config.cpp  daemon.cpp  dhcp.cpp  interface.cpp  main.cpp  recv.cpp  resolver.cpp  time.cpp
modules/perf/: CMakeLists.txt
modules/perf/src/: args.cpp  commands.cpp  data.cpp  main.cpp  map.cpp  perf.hpp  run.cpp  sched.cpp  support.cpp  wki.cpp
modules/powerctl/: CMakeLists.txt
modules/powerctl/src/: main.cpp
modules/renderbench/: CMakeLists.txt
modules/renderbench/src/: main.cpp  render_core.cpp  render_core.hpp  render_protocol.cpp  render_protocol.hpp
modules/sftpserver/: CMakeLists.txt
modules/sftpserver/src/: filesystem.cpp  filesystem.hpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp  transport.cpp  transport.hpp
modules/stdlib/: CMakeLists.txt
modules/strace/: CMakeLists.txt
modules/strace/src/: cli.cpp  cli.hpp  common.hpp  decode.cpp  decode.hpp  main.cpp  output.cpp  output.hpp  ptrace_client.cpp  ptrace_client.hpp  remote.cpp  remote.hpp  time_format.cpp  time_format.hpp  trace.cpp  trace.hpp
modules/testd/: CMakeLists.txt
modules/testd/src/: harness.cpp  main.cpp  registry.cpp  remote_helper.cpp  suite_ipc.cpp  suite_journal.cpp  suite_memory.cpp  suite_misc.cpp  suite_net.cpp  suite_process.cpp  suite_remote_ipc.cpp  suite_vfs.cpp  suite_wki.cpp  testd.hpp
modules/testprog/: CMakeLists.txt  linker.ld
modules/testprog/src/: asan_crasher.cpp  asan_crasher.hpp  cowbench.cpp  cowbench.hpp  exec_stress_worker.cpp  fsbench.cpp  fsbench.hpp  main.cpp  netbench.cpp  netbench.hpp  perfbench.cpp  perfbench.hpp
modules/top/: CMakeLists.txt
modules/top/src/: app.cpp  io.cpp  main.cpp  parse.cpp  procfs_reader.cpp  render.cpp  terminal.cpp  types.cpp
modules/wkictl/: CMakeLists.txt
modules/wkictl/src/: cli.cpp  dispatch.cpp  main.cpp  perf.cpp  target.cpp  vfs.cpp  wosid.cpp
tests/: .clang-tidy  .clangd  CMakeLists.txt
tests/host/: CMakeLists.txt
tests/host/fuzz/: data_struct_fuzz.cpp  slab_fuzz.cpp  tcp_fuzz.cpp  wki_routing_fuzz.cpp  wki_wire_fuzz.cpp  xfs_format_fuzz.cpp
tests/host/unit/: bitmap_test.cpp  block_device_source_test.py  buffer_cache_source_test.py  buffer_cache_test.cpp  cluster_setup_test.py  coverage_summary_test.py  crc32c_test.cpp  cross_os_benchmark_suite_test.py  data_struct_test.cpp  debugserver_source_test.py  devfs_wki_lifetime_source_test.py  exec_source_test.py  fixed_resource_scaling_test.py  futex_source_test.py  hashtable_limit_test.cpp  host_test_manifest_test.py  httpd_source_test.py  image_source_test.py  init_source_test.py  init_stdio_source_test.py  journal_source_test.py  kasan_bootstrap_source_test.py  kernel_vmap_source_test.py  ktest_cov_test.py  ktest_manifest_test.py  linux_cluster_source_test.py  memacc_source_test.py  mlibc_dns_source_test.py  mlibc_spawn_source_test.py  mlibc_vfs_source_test.py  modules_cmake_source_test.py  net_checksum_test.cpp  net_table_lifetime_source_test.py  netd_dns_source_test.py  netpoll_backlog_source_test.py  perf_source_test.py  phys_source_test.py  (+87 more)
tools/: .clang-tidy  .clangd  CMakeLists.txt  bootstrap.sh  build-llvm-instructions.bash  build-llvm.sh  build-toolchain.sh  ccache_env.sh  host-toolchain.sh  parse_wos_coredump.py  stage-distributed-compiler-roots.sh  wos-toolchain.sh  x86_64-pc-wos-mlibc.txt
tools/benchmarks/: CMakeLists.txt
tools/qemu_log_tool/: CMakeLists.txt  CONFIG.md  config.cpp  config.h  log_processor.cpp  log_processor.h  log_server.cpp  log_server.h  log_worker.cpp  logview.json.example  main.cpp  qemu_log_viewer.cpp  qemu_log_viewer.desktop.in  qemu_log_viewer.h  resolve_addresses.cpp  virtual_table.cpp  virtual_table.h  virtual_table_integration.cpp  virtual_table_integration.h
tools/wireshark/: wki.lua
tools/wosdbg/: CMakeLists.txt  capstone_disasm.cpp  capstone_disasm.h  config.cpp  config.h  coredump_browser.cpp  coredump_browser.h  coredump_disasm_panel.cpp  coredump_disasm_panel.h  coredump_elf_panel.cpp  coredump_elf_panel.h  coredump_memory.cpp  coredump_memory.h  coredump_memory_panel.cpp  coredump_memory_panel.h  coredump_parser.cpp  coredump_parser.h  coredump_register_panel.cpp  coredump_register_panel.h  coredump_segment_panel.cpp  coredump_segment_panel.h  debug_analysis_service.cpp  debug_analysis_service.h  elf_symbol_resolver.cpp  elf_symbol_resolver.h  log_client.cpp  log_client.h  log_entry.h  log_processor.cpp  log_processor.h  log_server.cpp  log_server.h  log_worker.cpp  main.cpp  mcp_http_server.cpp  mcp_http_server.h  protocol.h  virtual_table.cpp  virtual_table.h  virtual_table_integration.cpp  (+5 more)
(+781 files in other folders)
